testsuite/tests/dependent/should_fail/T16344.stderr

T16344.hs:7:46: error:
    • Expected kind ‘ka’, but ‘Int’ has kind ‘*’
    • In the second argument of ‘T’, namely ‘Int’
      In the type ‘(T Type Int Bool)’
      In the definition of data constructor ‘MkT’
